@@ -29,7 +29,6 @@ import java.util.Optional;
 import java.util.concurrent.Executors;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
@@ -82,8 +81,7 @@ public class MonitorActivityTracker implements OperatorPlugin {
     protected void pingAllSessions() {
         // Only look at handled sessions (handled sessions have a lastActivity)
         List<Session> sessions = resourceClient.sessions().list().stream()
-                .filter(session -> OperatorStatus.HANDLED.equals(session.getStatus().getOperatorStatus()))
-                .collect(Collectors.toList());
+                .filter(session -> OperatorStatus.HANDLED.equals(session.getStatus().getOperatorStatus())).toList();
         String correlationId = generateCorrelationId();
 
         LOGGER.debug("Pinging sessions: " + sessions);
